<resources>
    <string name="add_series">Ajouter une Série</string>
    <string name="app_name">My Manga List</string>
    <string name="button_add">Ajouter</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_edit">Modifier</string>
    <string name="chapter_read">Chapitres lus</string>
    <string name="export_json">Exporter JSON</string>
    <string name="image_manga">Image du manga</string>
    <string name="make_notes">Entrez vos notes ici…</string>
    <string name="manga_owned">Possédés: 0</string>
    <string name="manga_read">Lus: 0</string>
    <string name="manga_series">Séries: 0</string>
    <string name="mangas">Mangas</string>
    <string name="owned_tome">Tomes possédés: 0</string>
    <string name="read_chapter">Chapitres lus: 0</string>
    <string name="read_tome">Tomes lus: 0</string>
    <string name="state">En Cours</string>
    <string name="title">Titre du Manga</string>
    <string name="url_manga">URL de la couverture</string>
    <string name="volume_owned">Tomes possédés</string>
    <string name="volume_read">Tomes lus</string>
    <string name="volume_total">Volume Intégral</string>
    <string name="button_validate">Valider</string>
    <string name="button_delete">Supprimer</string>
    <string name="import_json">Importer JSON</string>
</resources>