<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/coverUrl"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/image_manga"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_total"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextVolumeIntegral"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/volume_total"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_owned"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextVolumeOwned"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/volume_owned"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_read"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextVolumesRead"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/volume_read"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_read"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextChapitre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/chapter_read"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_manga"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/editTextCoverUrl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/image_manga"
            android:inputType="textUri"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/state_options"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/dark_gray"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonValidate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_validate"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/light_green"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/button_delete"
                android:backgroundTint="@color/dark_red"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>