<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mangaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mangaState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mangaVolumesOwned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/owned_tome"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressBackgroundTint="@color/light_gray"
                android:progressDrawable="@drawable/progress_bar_custom"
                android:progressTint="@color/dark_red" />

            <TextView
                android:id="@+id/mangaVolumesRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/read_tome"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressBackgroundTint="@color/light_gray"
                android:progressDrawable="@drawable/progress_bar_custom"
                android:progressTint="@color/dark_red" />

            <TextView
                android:id="@+id/chapitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/read_chapter"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_red"
                android:padding="4dp"
                android:text="@string/edit_button"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <!-- Jaquette du manga -->
            <ImageView
                android:id="@+id/mangaCover"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/default_cover" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
